# MindFox

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
demos/dokidoki/: .gitignore  characters.py  config.py  dialogue.py  dokidoki.py  mood.py  mxbs_bridge.py  reactions.yaml
demos/hawaii2035/: README.md
demos/oyatsu/: README.md  characters.py  engine.py  llm.py  main.py  memory.py  preset.json
demos/oyatsu_chatterfox/: README.md  baker.py  data.py  game_state.py  main.py  preset.py
demos/oyatsu_chatterfox/sample/: chatterfox_phase0.py
demos/oyatsu_chatterfox/scenario/: oyatsu.yaml  world.yaml
demos/oyatsu_chatterfox/scenario/scenes/: endings.yaml  hear_elmar.yaml  hear_mari.yaml  hear_noc.yaml  hear_sumire.yaml  hear_til.yaml  hear_veri.yaml  intro.yaml  lobby.yaml
demos/pageone/: README.md  cards.py  characters.py  engine.py  extract_game13_detail.py  extract_report_data.py  lines.py  main.py  memory.py  pageone_mood.json  preset.json
demos/pageone/results/: v0.4_A_zero_seed42.json  v0.4_B_archetype_seed42.json  v0.4_C_uniform_t0.10_seed42.json  v0.4_report.md
demos/pageone/tests/: test_v04_integration.py
demos/sengoku/: .gitignore  Cargo.toml  README.md  sengoku_save.db
demos/sengoku/src/: engine.rs  llm.rs  main.rs  memory.rs  scenario.rs  types.rs
docs/: dokidoki_memory_spec.md  mxbs_concept.md  mxbs_roadmap.md  mxbs_spec.md  mxchatterfox_api.md  mxchatterfox_concept.md  mxmf_architecture.md  mxyamamva_api.md  mxyamamva_concept.md  oyatsu_chatterfox_spec.md  oyatsu_spec.md  pageone_spec.md  sengoku_report.md
docs/.aletheia/: config
mxbs/: Cargo.toml  README.md
mxbs/python/: mxbs_bridge.py  test_bridge.py  yamamva_bridge.py
mxbs/src/: agents.rs  chatterfox.rs  ffi.rs  lib.rs  preset.rs  yamamva.rs
mxbs/tests/: ffi_test.rs
mxmindfox/: Cargo.toml  README.md
mxmindfox/python/: mxmindfox_bridge.py  test_bridge.py
mxmindfox/src/: decision.rs  diplomacy.rs  error.rs  ffi.rs  lib.rs  mood.rs  threshold.rs
mxmindfox/tests/: decision_test.rs  diplomacy_test.rs  ffi_test.rs  mood_test.rs  threshold_test.rs
