[workspace]
resolver = "2"
members = [
    "mxbs",
    "mxmindfox",
    "demos/sengoku",
]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/kikyujin/MindFox"
authors = ["Mahito KIDA <contact@multitapps.com>"]

[workspace.dependencies]
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
