[package]
name = "mxmindfox"
description = "Multi-agent orchestration layer built on MxBS"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
mxbs = { path = "../mxbs" }
rusqlite = { workspace = true }
