[package]
name = "mxmindfox"
description = "Multi-agent mood & decision layer on MxBS"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["lib", "cdylib"]
name = "mxmindfox"

[dependencies]
mxbs = { path = "../mxbs" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = { version = "0.8", features = ["small_rng"] }
thiserror = "1"

[dev-dependencies]
tempfile = "3"
