[package]
name = "mxmindfox"
version = "0.1.0"
description = "Multi-agent mood, decision and diplomacy layer for game NPCs — built on MxBS"
keywords = ["gamedev", "npc", "ai", "agent", "mood"]
categories = ["game-development", "simulation"]
readme = "README.md"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
crate-type = ["lib", "cdylib"]
name = "mxmindfox"

[dependencies]
mxbs = { version = "0.3.1", path = "../mxbs" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = { version = "0.8", features = ["small_rng"] }
thiserror = "1"

[dev-dependencies]
tempfile = "3"
