[package]
name = "sengoku-demo"
version = "0.1.0"
edition.workspace = true

[dependencies]
mxbs = { path = "../../mxbs" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
